updates to styling

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -67,7 +67,7 @@
           padding: 15px 0;
           font-size: 15px;
           display: inline-block;
-          color: $base-color3;
+          color: $base-color4;
           text-transform: uppercase;
           font-family: "Roboto", sans-serif;
           font-weight: 500;
@@ -96,7 +96,7 @@
       }
 
       svg {
-        fill: #ffffff;
+        fill: $base-color2;
         width: 15px;
       }
 
