--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -3,7 +3,7 @@
 .st-hero-wrap {
   position: relative;
   height: 850px;
-  background-color: #080e1e;
+  background-color: #fdfeff;
 
   img {
     height: 100%;
@@ -62,7 +62,7 @@
 
 .st-social-group {
   background-color: $dark-color4;
-  border: 1px solid $base-color4;
+  border: 1px solid $base-color1;
   border-right: 0;
   border-radius: 50px 0 0 50px;
   height: 80px;
