--- a/src/sass/default/_variable.scss
+++ b/src/sass/default/_variable.scss
@@ -1,12 +1,19 @@
 // Base Color
+//buttons and title
 $base-color1: #fec544;
 $base-color2: #a9adb8;
 $base-color3: #fdfeff;
+//some other borders
 $base-color4: #232935;
 
 // Dark Color
-$dark-color1: #151b29;
-$dark-color2: #070d1b;
-$dark-color3: #0a101e;
-$dark-color4: #101624;
-$dark-color5: #3f4551;
+//section title
+$dark-color1: #e1e5ec;
+//review and contact section
+$dark-color2: #fdfeff;
+//about me, portfolio, services, and bottom
+$dark-color3: #fdfeff;
+//picture tab, services square, review bubble, contact form squares
+$dark-color4: #e1e5ec;
+//some line borders
+$dark-color5: #e1e5ec;
